# Carbon

./: CMakeLists.txt
.github/: README.md
hello_carbon/: CMakeLists.txt  main.cpp
include/Carbon/: Carbon.h  Carbon.hpp  collisions.h  tri_intersect.h  types.h
include/Carbon/debug/: log.h  log.hpp  renderer.h  renderer.hpp
include/Carbon/types/: colliders.hpp  matrix.hpp  types.h  types.hpp  vector.h
include/Carbon/utility/: collisions.hpp  tri_intersect.h
src/: Carbon.cpp  collisions.cpp
src/debug/: log.c  renderer.cpp
src/types/: colliders.cpp  matrix.cpp  types.cpp  vector.cpp
src/utility/: collisions.cpp
